feat: define schemas for Book and Author resources

--- a/LibraryManagement.yaml
+++ b/LibraryManagement.yaml
@@ -4,4 +4,38 @@ info:
   description: API for managing books and authors in a library.
   version: 1.0.0
 paths: {}
-components: {}
+components:
+  schemas:
+    Book:
+      type: object
+      properties:
+        id:
+          type: string
+        bookName:
+          type: string
+        author:
+          type: string
+        pageNumbers:
+          type: integer
+        topic:
+          type: string
+          enum:
+            - ROMANCE
+            - COMEDY
+            - OTHER
+        releaseDate:
+          type: string
+          format: date
+    Author:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        sex:
+          type: string
+          enum:
+            - M
+            - F
+
