--- a/LibraryManagement.yaml
+++ b/LibraryManagement.yaml
@@ -1,9 +1,55 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: Library Management API
   description: API for managing books and authors in a library.
   version: 1.0.0
-paths: {}
+paths:
+  /books:
+    get:
+      summary: Get a list of books
+      responses:
+        '200':
+          description: A list of books
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Book'
+    post:
+      summary: Create a new book
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Book'
+      responses:
+        '201':
+          description: Book created
+    put:
+      summary: Update an existing book
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Book'
+      responses:
+        '200':
+          description: Book updated
+    delete:
+      summary: Delete a book
+      parameters:
+        - in: query
+          name: bookId
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Book deleted
+
 components:
   schemas:
     Book:
