--- a/LibraryManagement.yaml
+++ b/LibraryManagement.yaml
@@ -62,6 +62,54 @@ paths:
       responses:
         '204':
           description: Book deleted
+          
+  /authors:
+    get:
+      summary: Get a list of authors
+      responses:
+        '200':
+          description: A list of authors
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Author'
+    post:
+      summary: Create a new author
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Author'
+      responses:
+        '201':
+          description: Author created
+    put:
+      summary: Update an existing author
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Author'
+      responses:
+        '200':
+          description: Author updated
+    delete:
+      summary: Delete an author
+      parameters:
+        - in: query
+          name: authorId
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Author deleted
+
+
 components:
   schemas:
     Book:
