feat(authors): add filtering by authorName for /authors GET

--- a/LibraryManagement.yaml
+++ b/LibraryManagement.yaml
@@ -66,6 +66,12 @@ paths:
   /authors:
     get:
       summary: Get a list of authors
+      parameters:
+        - in: query
+          name: authorName
+          required: false
+          schema:
+            type: string
       responses:
         '200':
           description: A list of authors
@@ -75,6 +81,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Author'
+
     post:
       summary: Create a new author
       requestBody:
