--- a/student-management/StudentManagement.yaml
+++ b/student-management/StudentManagement.yaml
@@ -10,6 +10,7 @@ paths:
   /students:
     get:
       summary: Get a list of students
+      operationId: getStudents
       parameters:
       - name: studentName
         in: query
@@ -37,6 +38,7 @@ paths:
                   $ref: '#/components/schemas/Student'
     put:
       summary: Update an existing student
+      operationId: updateStudent
       requestBody:
         content:
           application/json:
@@ -48,6 +50,7 @@ paths:
           description: Student updated
     post:
       summary: Create a new student
+      operationId: createStudent
       requestBody:
         content:
           application/json:
@@ -70,9 +73,10 @@ paths:
       responses:
         "204":
           description: Student deleted
-  /group:
+  /groups:
     get:
       summary: Get a list of group
+      operationId: getGroup
       parameters:
       - name: groupName
         in: query
@@ -99,6 +103,7 @@ paths:
                   $ref: '#/components/schemas/Group'
     put:
       summary: Update an existing group
+      operationId: updateGroup
       requestBody:
         content:
           application/json:
@@ -110,6 +115,7 @@ paths:
           description: Author group
     post:
       summary: Create a new group
+      operationId: createGroup
       requestBody:
         content:
           application/json:
@@ -141,13 +147,16 @@ components:
           type: string
         sex:
           type: string
+          enum:
+          - Male
+          - Female
         birthdate:
           type: string
           format: date
         reference:
           type: string
         group:
-          type: Group
+          $ref: '#/components/schemas/Group'
     Group:
       type: object
       properties:
