--- a/library-management/LibraryManagement.yaml
+++ b/library-management/LibraryManagement.yaml
@@ -114,11 +114,19 @@ paths:
         explode: false
         schema:
           type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateBookAuthor'
+        required: true
       responses:
         "200":
           description: Successfully associated the author with the book
         "404":
           description: Book or Author not found
+        "400":
+          description: "Invalid input (e.g., missing bookId or authorId in path)"
   /authors:
     get:
       summary: Get a list of authors
@@ -172,13 +180,6 @@ components:
         releaseDate:
           type: string
           format: date
-    UpdateBookAuthor:
-      type: object
-      properties:
-        bookId:
-          type: string
-        authorId:
-          type: string
     Book:
       type: object
       properties:
@@ -200,3 +201,10 @@ components:
           enum:
           - M
           - F
+    UpdateBookAuthor:
+      type: object
+      properties:
+        bookId:
+          type: string
+        authorId:
+          type: string
